# testcase-tool

./: .env.sh  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  DECODE_CODE_COMPARISON.md  Dockerfile  FILE_INDEX.md  LINE_CHECKSUMS_GUIDE.md  Makefile  PAPER_TRANSFER_GUIDE.md  PAPER_TRANSFER_README.md  PARSER_USAGE.md  PROMPT.md  README.md  TestPlanRendererApprovalTests.test_error_invalid_json_format.approved.txt  TestPlanRendererApprovalTests.test_error_nonexistent_template_file.approved.txt  TestPlanRendererApprovalTests.test_render_empty_test_runs_list.approved.txt  TestPlanRendererApprovalTests.test_render_large_test_runs_list.approved.txt  TestPlanRendererApprovalTests.test_render_minimal_test_plan.approved.txt  TestPlanRendererApprovalTests.test_render_missing_optional_fields.approved.txt  TestPlanRendererApprovalTests.test_render_with_default_template_and_real_data.approved.txt  TestPlanRendererApprovalTests.test_render_with_multi_line_text_field.approved.txt  TestPlanRendererApprovalTests.test_render_with_null_values.approved.txt  TestPlanRendererGsmaApprovalTests.test_error_missing_container_argument.missing_container.approved.txt  TestPlanRendererGsmaApprovalTests.test_render_minimal_test_case.minimal.approved.txt  TestPlanRendererGsmaApprovalTests.test_render_with_empty_test_sequences.empty_sequences.approved.txt  TestPlanRendererGsmaApprovalTests.test_render_with_missing_optional_fields.missing_fields.approved.txt  TestPlanRendererGsmaApprovalTests.test_render_with_special_characters_in_descriptions.special_chars.approved.txt  VALIDATOR_USAGE.md  demo.sh  (+41 more)
(+67 files in other folders)
