[project]
name = "testcase-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.11.0",
    "pre-commit>=4.4.0",
    "pyyaml>=6.0.3",
]

[tool.black]
line-length = 180
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 180

[tool.flake8]
max-line-length = 180
extend-ignore = ["E203", "W503"]
exclude=".git,__pycache__, build, dist"
